[package]
name = "highnoon"
version = "0.1.0"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2018"

description = "minimal web server framework inspired by tide, but built on hyper"
license = "MIT"
repository = "https://github.com/sphenlee/highnoon"
documentation = "https://docs.rs/highnoon"
readme = "README.md"

keywords = ["web", "tokio", "hyper", "http"]
categories = ["web-programming::http-server"]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures-util = "0.3"
hyper = "0.13"
headers = "0.3"
route-recognizer = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "0.2", features = ["rt-threaded", "net", "macros"] }
tokio-tungstenite = "0.11" # 0.12 depends on tokio 0.3


[dev-dependencies]
serde_derive = "1.0"
