[package]
name = "highnoon"
version = "0.0.4"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2018"

description = "minimal web server framework inspired by tide, but built on hyper"
license = "MIT"
repository = "https://github.com/sphenlee/highnoon"
documentation = "https://docs.rs/highnoon"
readme = "README.md"

keywords = ["web", "tokio", "hyper", "http"]
categories = ["web-programming::http-server"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.0"
cookie = { version = "0.14", features = ["signed"] }
futures-util = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime", "tcp", "stream"] }
headers = "0.3"
mime = "0.3"
mime_guess = "2.0"
route-recognizer = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
time = "0.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros", "io-util", "fs"] }
tokio-tungstenite = "0.13"
tokio-util = { version = "0.6", features = ["io"] }
tracing = "0.1"
uuid = { version = "0.8.2", features = ["v4"]}


[dev-dependencies]
serde_derive = "1.0"
tracing-subscriber = "0.2"