[package]
name = "highnoon"
version = "0.0.9"
authors = ["Steve Lee <sphen.lee@gmail.com>"]
edition = "2021"

description = "minimal web server framework inspired by tide, but built on hyper"
license = "MIT"
repository = "https://github.com/sphenlee/highnoon"
documentation = "https://docs.rs/highnoon"
readme = "README.md"

keywords = ["web", "tokio", "hyper", "http"]
categories = ["web-programming::http-server"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
bytes = "1.2.1"
cookie = { version = "0.16.1", features = ["signed"] }
futures-util = "0.3.25"
hyper = { version = "0.14.22", features = ["server", "http1", "http2", "runtime", "tcp", "stream"] }
headers = "0.3.8"
mime = "0.3.16"
mime_guess = "2.0.4"
route-recognizer = "0.3.1"
serde = "1.0.147"
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
time = "0.3.16"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "net", "macros", "io-util", "fs"] }
tokio-tungstenite = "0.17.2"
tokio-util = { version = "0.7.4", features = ["io"] }
tracing = "0.1.37"
uuid = { version = "1.2.1", features = ["v4"] }


[dev-dependencies]
serde_derive = "1.0.147"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
